--- a/groups/IHRIS/IHRISTrain.yaml
+++ b/groups/IHRIS/IHRISTrain.yaml
@@ -35,8 +35,8 @@ BASIC:
   label: iHRIS Train - Auto List
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-auto-list/ihris-train-auto-list.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-auto-list/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-auto-list/ihris-train-auto-list.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-auto-list/%CODE%.po"
 
 MANGLER:
   prefix: tra-apr-
@@ -46,8 +46,8 @@ BASIC:
   label: iHRIS Train - Access Provider
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/train-access-provider/train-access-provider.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/train-access-provider/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/train-access-provider/train-access-provider.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/train-access-provider/%CODE%.po"
 
 MANGLER:
   prefix: tra-apr-
@@ -57,8 +57,8 @@ BASIC:
   label: iHRIS Train - Category
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/training-category/training-category.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/training-category/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/training-category/training-category.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/training-category/%CODE%.po"
 
 MANGLER:
   prefix: tra-cat-
@@ -68,8 +68,8 @@ BASIC:
   label: iHRIS Train - Classification
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/training-classification/training-classification.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/training-classification/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/training-classification/training-classification.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/training-classification/%CODE%.po"
 
 MANGLER:
   prefix: tra-cla-
@@ -79,8 +79,8 @@ BASIC:
   label: iHRIS Train - Competency
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/training-competency/training-competency.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/training-competency/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/training-competency/training-competency.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/training-competency/%CODE%.po"
 
 MANGLER:
   prefix: tra-com-
@@ -90,8 +90,8 @@ BASIC:
   label: iHRIS Train - Custom Reports
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-custom-reports/ihris-train-custom-reports.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-custom-reports/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-custom-reports/ihris-train-custom-reports.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-custom-reports/%CODE%.po"
 
 MANGLER:
   prefix: tra-cre-
@@ -101,8 +101,8 @@ BASIC:
   label: iHRIS Train - Custom Report Full Search Person
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/custom-reports-full-search-person/custom-reports-full-search-person.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/custom-reports-full-search-person/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/custom-reports-full-search-person/custom-reports-full-search-person.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/custom-reports-full-search-person/%CODE%.po"
 
 MANGLER:
   prefix: tra-crfspe-
@@ -112,8 +112,8 @@ BASIC:
   label: iHRIS Train - Custom Reports Full Seach Provider
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/custom-reports-full-search-provider/custom-reports-full-search-provider.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/custom-reports-full-search-provider/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/custom-reports-full-search-provider/custom-reports-full-search-provider.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/custom-reports-full-search-provider/%CODE%.po"
 
 MANGLER:
   prefix: tra-crfspr-
@@ -123,8 +123,8 @@ BASIC:
   label: iHRIS Train - Custom Reports Scheduled Training
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-custom-reports-scheduled-training/ihris-train-custom-reports-scheduled-training.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-custom-reports-scheduled-training/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-custom-reports-scheduled-training/ihris-train-custom-reports-scheduled-training.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-custom-reports-scheduled-training/%CODE%.po"
 
 MANGLER:
   prefix: tra-crst-
@@ -134,8 +134,8 @@ BASIC:
   label: iHRIS Train - Custom Reports Training Participant
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-custom-reports-training-participant/ihris-train-custom-reports-training-participant.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-custom-reports-training-participant/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-custom-reports-training-participant/ihris-train-custom-reports-training-participant.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-custom-reports-training-participant/%CODE%.po"
 
 MANGLER:
   prefix: tra-crtp-
@@ -145,8 +145,8 @@ BASIC:
   label: iHRIS Train - Education
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/education/education.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/education/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/education/education.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/education/%CODE%.po"
 
 MANGLER:
   prefix: tra-edu-
@@ -156,8 +156,8 @@ BASIC:
   label: iHRIS Train - Exam Paper
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/exam-paper/exam-paper.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/exam-paper/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/exam-paper/exam-paper.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/exam-paper/%CODE%.po"
 
 MANGLER:
   prefix: tra-epa-
@@ -167,8 +167,8 @@ BASIC:
   label: iHRIS Train - Facility
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/train-facility/train-facility.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/train-facility/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/train-facility/train-facility.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/train-facility/%CODE%.po"
 
 MANGLER:
   prefix: tra-fac-
@@ -178,8 +178,8 @@ BASIC:
   label: iHRIS Train - Fee Type
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/fee-type/fee-type.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/fee-type/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/fee-type/fee-type.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/fee-type/%CODE%.po"
 
 MANGLER:
   prefix: tra-fty-
@@ -189,8 +189,8 @@ BASIC:
   label: iHRIS Train - Instance Calendar
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/instance-calendar/instance-calendar.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/instance-calendar/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/instance-calendar/instance-calendar.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/instance-calendar/%CODE%.po"
 
 MANGLER:
   prefix: tra-ica-
@@ -200,8 +200,8 @@ BASIC:
   label: iHRIS Train - Core
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train/ihris-train.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train/ihris-train.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train/%CODE%.po"
 
 MANGLER:
   prefix: tra-core-
@@ -211,8 +211,8 @@ BASIC:
   label: iHRIS Train - Person Instance
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/person-instance/person-instance.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/person-instance/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/person-instance/person-instance.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/person-instance/%CODE%.po"
 
 MANGLER:
   prefix: tra-pin
@@ -222,8 +222,8 @@ BASIC:
   label: iHRIS Train - Person Exam
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/person-exam/person-exam.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/person-exam/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/person-exam/person-exam.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/person-exam/%CODE%.po"
 
 MANGLER:
   prefix: tra-pex-
@@ -233,8 +233,8 @@ BASIC:
   label: iHRIS Train - Position
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/train-position/train-position.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/train-position/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/train-position/train-position.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/train-position/%CODE%.po"
 
 MANGLER:
   prefix: tra-pos-
@@ -244,8 +244,8 @@ BASIC:
   label: iHRIS Train - Provider Instance
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/provider-instance/provider-instance.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/provider-instance/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/provider-instance/provider-instance.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/provider-instance/%CODE%.po"
 
 MANGLER:
   prefix: tra-pri-
@@ -255,8 +255,8 @@ BASIC:
   label: iHRIS Train - Provider
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/training-provider/training-provider.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/training-provider/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/training-provider/training-provider.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/training-provider/%CODE%.po"
 
 MANGLER:
   prefix: tra-pro-
@@ -266,8 +266,8 @@ BASIC:
   label: iHRIS Train - Provider Training
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/provider-training/provider-training.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/provider-training/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/provider-training/provider-training.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/provider-training/%CODE%.po"
 
 MANGLER:
   prefix: tra-ptr-
@@ -277,8 +277,8 @@ BASIC:
   label: iHRIS Train - Registration
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/registration/registration.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/registration/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/registration/registration.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/registration/%CODE%.po"
 
 MANGLER:
   prefix: tra-reg-
@@ -288,8 +288,8 @@ BASIC:
   label: iHRIS Train - Site Demo
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-site-demo/ihris-train-site-demo.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-site-demo/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-site-demo/ihris-train-site-demo.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-site-demo/%CODE%.po"
 
 MANGLER:
   prefix: tra-sde-
@@ -299,8 +299,8 @@ BASIC:
   label: iHRIS Train - Site
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-site/ihris-train-site.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-site/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-site/ihris-train-site.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/ihris-train-site/%CODE%.po"
 
 MANGLER:
   prefix: tra-sit-
@@ -310,8 +310,8 @@ BASIC:
   label: iHRIS Train - Training
 
 FILES:
-  definitionFile: %GROUPROOT%/ihris/ihris-train/translations/templates/training/training.pot
-  sourcePattern: %GROUPROOT%/ihris/ihris-train/translations/templates/training/%CODE%.po
+  definitionFile: "%GROUPROOT%/ihris/ihris-train/translations/templates/training/training.pot"
+  sourcePattern: "%GROUPROOT%/ihris/ihris-train/translations/templates/training/%CODE%.po"
 
 MANGLER:
   prefix: tra-tra-
