--- a/groups/MantisBT/MantisBT.yaml
+++ b/groups/MantisBT/MantisBT.yaml
@@ -117,7 +117,7 @@ BASIC:
   label: MantisBT - Core
 
 FILES:
-  sourcePattern: %GROUPROOT%/mantis/lang/strings_%CODE%.txt
+  sourcePattern: "%GROUPROOT%/mantis/lang/strings_%CODE%.txt"
 
 TAGS:
   optional:
@@ -139,7 +139,7 @@ BASIC:
   description: "{{int:translate-group-desc-mantisbt-plugin-core}}"
 
 FILES:
-  sourcePattern: %GROUPROOT%/mantis/plugins/MantisCoreFormatting/lang/strings_%CODE%.txt
+  sourcePattern: "%GROUPROOT%/mantis/plugins/MantisCoreFormatting/lang/strings_%CODE%.txt"
 
 ---
 BASIC:
@@ -148,7 +148,7 @@ BASIC:
   description: "{{int:translate-group-desc-mantisbt-plugin-core}}"
 
 FILES:
-  sourcePattern: %GROUPROOT%/mantis/plugins/MantisGraph/lang/strings_%CODE%.txt
+  sourcePattern: "%GROUPROOT%/mantis/plugins/MantisGraph/lang/strings_%CODE%.txt"
 
 ---
 BASIC:
@@ -157,4 +157,4 @@ BASIC:
   description: "{{int:translate-group-desc-mantisbt-plugin-core}}"
 
 FILES:
-  sourcePattern: %GROUPROOT%/mantis/plugins/XmlImportExport/lang/strings_%CODE%.txt
+  sourcePattern: "%GROUPROOT%/mantis/plugins/XmlImportExport/lang/strings_%CODE%.txt"
