--- a/groups/Mwlib/Mwlibrl.yaml
+++ b/groups/Mwlib/Mwlibrl.yaml
@@ -10,7 +10,7 @@ BASIC:
 
 FILES:
   class: GettextFFS
-  sourcePattern: %GROUPROOT%/mwlib.rl/mwlib/rl/locale/%CODE%/LC_MESSAGES/mwlib.rl.po
+  sourcePattern: "%GROUPROOT%/mwlib.rl/mwlib/rl/locale/%CODE%/LC_MESSAGES/mwlib.rl.po"
   codeMap:
     pt-br: pt_BR
     nb: "no"
