--- a/groups/Nocc/Nocc.yaml
+++ b/groups/Nocc/Nocc.yaml
@@ -22,7 +22,7 @@ BASIC:
 
 FILES:
   class: FlatPhpFFS
-  sourcePattern: %GROUPROOT%/nocc/webmail/lang/%CODE%.php
+  sourcePattern: "%GROUPROOT%/nocc/webmail/lang/%CODE%.php"
   codeMap:
     sr-el: sr
   header: |
@@ -63,8 +63,8 @@ BASIC:
 
 FILES:
   class: GettextFFS
-  definitionFile: %GROUPROOT%/nocc/htdocs/engine/languages/en.pot
-  sourcePattern: %GROUPROOT%/nocc/htdocs/engine/languages/%CODE%.po
+  definitionFile: "%GROUPROOT%/nocc/htdocs/engine/languages/en.pot"
+  sourcePattern: "%GROUPROOT%/nocc/htdocs/engine/languages/%CODE%.po"
   codeMap:
     en-gb:   en_GB
     en-us:   en_US
