--- a/groups/OpenStreetMap/OpenStreetMap.yaml
+++ b/groups/OpenStreetMap/OpenStreetMap.yaml
@@ -35,7 +35,7 @@ BASIC:
   description: "{{int:bw-desc-osm-site}}"
 
 FILES:
-  sourcePattern: %GROUPROOT%/osm/config/locales/%CODE%.yml
+  sourcePattern: "%GROUPROOT%/osm/config/locales/%CODE%.yml"
 
 CHECKER:
   class: OSMMessageChecker
