--- a/groups/OpenStreetMap/WaymarkedTrails.yaml
+++ b/groups/OpenStreetMap/WaymarkedTrails.yaml
@@ -29,8 +29,8 @@ MANGLER:
 
 FILES:
   class: GettextFFS
-  sourcePattern: %GROUPROOT%/waymarked-trails-site/django/locale/%CODE%/LC_MESSAGES/django.po
-  definitionFile: %GROUPROOT%/waymarked-trails-site/django/locale/qot/LC_MESSAGES/django.po
+  sourcePattern: "%GROUPROOT%/waymarked-trails-site/django/locale/%CODE%/LC_MESSAGES/django.po"
+  definitionFile: "%GROUPROOT%/waymarked-trails-site/django/locale/qot/LC_MESSAGES/django.po"
   codeMap:
     # This is needed because they have symlinked no to nb to avoid import
     "no": x-invalidLanguageCode
@@ -65,6 +65,6 @@ MANGLER:
 
 FILES:
   class: YamlFFS
-  sourcePattern: %GROUPROOT%/waymarked-trails-site/django/locale/%CODE%/helppages.yaml
-  definitionFile: %GROUPROOT%/waymarked-trails-site/django/locale/qot/helppages.yaml
+  sourcePattern: "%GROUPROOT%/waymarked-trails-site/django/locale/%CODE%/helppages.yaml"
+  definitionFile: "%GROUPROOT%/waymarked-trails-site/django/locale/qot/helppages.yaml"
 
