--- a/groups/Wikimedia/WikimediaMobile-ios.yaml
+++ b/groups/Wikimedia/WikimediaMobile-ios.yaml
@@ -15,7 +15,7 @@ MANGLER:
 
 FILES:
   class: JsonFFS
-  sourcePattern: %GROUPROOT%/commons-ios/Commons-iOS/messages/messages-%CODE%.json
+  sourcePattern: "%GROUPROOT%/commons-ios/Commons-iOS/messages/messages-%CODE%.json"
 
 ---
 BASIC:
@@ -34,7 +34,7 @@ MANGLER:
 
 FILES:
   class: AppleFFS
-  sourcePattern: %GROUPROOT%/wikipedia-ios/wikipedia/%CODE%.lproj/Localizable.strings
+  sourcePattern: "%GROUPROOT%/wikipedia-ios/wikipedia/%CODE%.lproj/Localizable.strings"
 
 ---
 BASIC:
@@ -53,7 +53,7 @@ MANGLER:
 
 FILES:
   class: AppleFFS
-  sourcePattern: %GROUPROOT%/wikipedia-ios/wikipedia/%CODE%.lproj/InfoPlist.strings
+  sourcePattern: "%GROUPROOT%/wikipedia-ios/wikipedia/%CODE%.lproj/InfoPlist.strings"
 
 ---
 BASIC:
@@ -72,7 +72,7 @@ MANGLER:
 
 FILES:
   class: AppleFFS
-  sourcePattern: %GROUPROOT%/wikipedia-ios/wikipedia/%CODE%.lproj/Main_iPhone.strings
+  sourcePattern: "%GROUPROOT%/wikipedia-ios/wikipedia/%CODE%.lproj/Main_iPhone.strings"
 
 TAGS:
   ignored:
