--- a/groups/Wikimedia/WikimediaMobile.yaml
+++ b/groups/Wikimedia/WikimediaMobile.yaml
@@ -40,8 +40,8 @@ MANGLER:
     - "*"
 
 FILES:
-  sourcePattern: %GROUPROOT%/WikipediaMobile/assets/www/messages/messages-%CODE%.properties
-  definitionFile: %GROUPROOT%/WikipediaMobile/assets/www/messages/messages-en.properties
+  sourcePattern: "%GROUPROOT%/WikipediaMobile/assets/www/messages/messages-%CODE%.properties"
+  definitionFile: "%GROUPROOT%/WikipediaMobile/assets/www/messages/messages-en.properties"
   header: |
     # This file is distributed under the same license as the Wikipedia Mobile PhoneGap package.
     #
@@ -60,8 +60,8 @@ MANGLER:
     - "*"
 
 FILES:
-  sourcePattern: %GROUPROOT%/WikipediaMobileJ2ME/messages/messages-%CODE%.properties
-  definitionFile: %GROUPROOT%/WikipediaMobileJ2ME/messages/messages-en.properties
+  sourcePattern: "%GROUPROOT%/WikipediaMobileJ2ME/messages/messages-%CODE%.properties"
+  definitionFile: "%GROUPROOT%/WikipediaMobileJ2ME/messages/messages-en.properties"
   header: |
     # This file is distributed under the same license as the Wikipedia Mobile PhoneGap package.
     #
@@ -88,8 +88,8 @@ MANGLER:
     - "*"
 
 FILES:
-  sourcePattern: %GROUPROOT%/WikisourceMobile/assets/www/messages/messages-%CODE%.properties
-  definitionFile: %GROUPROOT%/WikisourceMobile/assets/www/messages/messages-en.properties
+  sourcePattern: "%GROUPROOT%/WikisourceMobile/assets/www/messages/messages-%CODE%.properties"
+  definitionFile: "%GROUPROOT%/WikisourceMobile/assets/www/messages/messages-en.properties"
   header: |
     # This file is distributed under the same license as the Wikisource Mobile package.
     #
@@ -108,8 +108,8 @@ MANGLER:
     - "*"
 
 FILES:
-  sourcePattern: %GROUPROOT%/WiktionaryMobile/assets/www/messages/messages-%CODE%.properties
-  definitionFile: %GROUPROOT%/WiktionaryMobile/assets/www/messages/messages-en.properties
+  sourcePattern: "%GROUPROOT%/WiktionaryMobile/assets/www/messages/messages-%CODE%.properties"
+  definitionFile: "%GROUPROOT%/WiktionaryMobile/assets/www/messages/messages-en.properties"
   header: |
     # This file is distributed under the same license as the Wiktionary Mobile package.
     #
