--- a/groups/FUDforum/FUDforum.yaml
+++ b/groups/FUDforum/FUDforum.yaml
@@ -10,7 +10,7 @@ BASIC:
 FILES:
   class: JavaFFS
   keySeparator: ":"
-  sourcePattern: %GROUPROOT%/fudforum/%CODE%/msg
+  sourcePattern: "%GROUPROOT%/fudforum/%CODE%/msg"
 
 CHECKER:
   class: FUDforumMessageChecker
