--- a/groups/Vicuna/Vicuna.yaml
+++ b/groups/Vicuna/Vicuna.yaml
@@ -9,8 +9,8 @@ BASIC:
 
 FILES:
   class: JavaFFS
-  sourcePattern: %GROUPROOT%/vicuna/src/cuploader/text_utf8/messages_%CODE%.properties
-  definitionFile: %GROUPROOT%/vicuna/src/cuploader/text_utf8/messages.properties
+  sourcePattern: "%GROUPROOT%/vicuna/src/cuploader/text_utf8/messages_%CODE%.properties"
+  definitionFile: "%GROUPROOT%/vicuna/src/cuploader/text_utf8/messages.properties"
   codeMap:
     cs:    cs_CZ
     es:    es_ES
