--- a/groups/Wikimedia/WikiBlame.yaml
+++ b/groups/Wikimedia/WikiBlame.yaml
@@ -8,7 +8,7 @@ BASIC:
 
 FILES:
   class: FlatPhpFFS
-  sourcePattern: %GROUPROOT%/wikiblame/%CODE%.php
+  sourcePattern: "%GROUPROOT%/wikiblame/%CODE%.php"
   header: |
     <?php
     /** WikiBlame
